<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegistarActivity" >

    <TextView
        android:id="@+id/title_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="34dp"
        android:text="@string/username" />

    <TextView
        android:id="@+id/current_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/title_user"
        android:layout_below="@+id/title_user"
        android:layout_marginTop="24dp"
        android:text="'''''''"
        />

    <TextView
        android:id="@+id/title_new_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/current_username"
        android:layout_below="@+id/current_username"
        android:layout_marginTop="23dp"
        android:text="@string/new_user_name" />

    <EditText
        android:id="@+id/new_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_new_username"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="60dp"
        android:layout_marginRight="35dp"
        android:text="@string/confirm" />
    
    
    </RelativeLayout>